[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Stackable Agent Integration tests"
edition = "2018"
license = "Apache-2.0"
name = "agent-integration-tests"
version = "0.1.0"

[dependencies]
integration-test-commons = { git = "https://github.com/stackabletech/integration-test-commons.git", tag = "0.1.0" }
futures = "0.3"
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
