[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Stackable Agent Integration tests"
edition = "2018"
license = "Apache-2.0"
name = "agent-integration-tests"
version = "0.1.0"

[dependencies]
futures = "0.3"
integration-test-commons = { git = "https://github.com/stackabletech/integration-test-commons.git", tag = "0.3.0" }
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
