[package]
authors = ["Siegfried Weber <mail@siegfriedweber.net>"]
description = "Stackable Agent Integration tests"
edition = "2018"
license = "Apache-2.0"
name = "agent-integration-tests"
repository = "https://github.com/stackabletech/agent-integration-tests"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
flate2 = "1.0"
futures = "0.3"
http = "0.2"
integration-test-commons = { git = "https://github.com/stackabletech/integration-test-commons.git", tag = "0.3.0" }
k8s-openapi = { version = "0.12", default-features = false, features = ["v1_21"] }
nix = "0.22"
rstest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sha2 = "0.9"
tar = "0.4"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.3"
